@@ -1,3 +1,7 @@
+2008-12-10  Juanma Barranquero  <lekktu@gmail.com>
+
+	* font.c (Ffont_spec): Move usage to end of docstring.
+
 2008-12-10  Jason Rumney  <jasonr@gnu.org>
 
 	* w32font.c (Qcham): New symbol.
